# ploidy-research

./: .gitignore  .gitleaksignore  .zenodo.json  404.html  CITATION.cff  CLAUDE.md  README.md  SECURITY.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  review.md  sitemap.xml
.claude/commands/: architecture.md  deprecate.md  hiring.md  ploidy.md  post-mortem.md  product-decision.md
.github/workflows/: build-paper.yml  ci.yml  docs.yml  maintenance.yml
ARCHITECTURE/: index.html
api-reference/: index.html
contributing/: index.html
custom-connector/: index.html
deploy/: README.md
deploy/discord/: Dockerfile  README.md  bot.py  requirements.txt
deploy/fly/: README.md  fly.toml
directory-submission/: index.html
docs/: ARCHITECTURE.md  custom-connector.md  directory-submission.md  index.md  privacy-policy.ko.md  privacy-policy.md  research.md  session-orchestration.md  terms-of-service.ko.md  terms-of-service.md  token-cost.md  v0.4-migration.md
experiments/: DATA_SOURCES.md  README.md  run_all.sh  run_experiment.py  tasks_extended.py
experiments/cells/: ad1.json  ad1_haiku.json  ad1_precheck.json  ad1_stage1.json  ad1_v2.json  ad3_smoke.json  p1_10_baseline_rerun.json  pilot_mini.json  pilot_mini2.json  pilot_mini2_rerun.json  pilot_opus-4-7.json  pilot_v2_P.json  pilot_v2_Q.json  pilot_v2_merged.json  pilot_v2_rerun.json  smoke_p1_9_5.json
experiments/data/processed/: ad1_interim_refusal_flags.json  ad1_stage1_aggregated.json
experiments/data/processed/design_review_2026-04-23/: README.md
experiments/data/processed/event_a_b/: fresh_excl_items_for_annotation.jsonl  per_trial.jsonl  w1_per_trial.jsonl
experiments/data/processed/memory_store_snapshot_20260611/: README.md
experiments/data/processed/memory_store_snapshot_20260611/evidence/: CONSOLIDATED_ARCHITECTURE_REVIEW.md  CONSOLIDATED_FOUR_REVIEWER_SUMMARY.md  arch_eval_saas_cells.md  project_arch_debate_fabrication_evidence.md  project_ploidy_protocol_artifact_injection.md  project_session_evidence.md
experiments/data/processed/memory_store_snapshot_20260611/fixtures/: project_arch_3region_5th_reviewer.md  project_arch_3region_final_verdict.md  project_arch_auth_colleague_seat.md  project_arch_auth_v1_auth0_4session_synthesis.md  project_arch_auth_v1_auth0_coi_seat.md  project_arch_auth_v1_auth0_coi_seat_r2.md  project_arch_auth_v1_auth0_secondary_oncall_r2.md  project_arch_auth_v1_auth0_secondary_oncall_seat.md  project_arch_auth_v1_auth0_secondary_oncall_seat_r10.md  project_arch_auth_v1_auth0_secondary_oncall_seat_r11.md  project_arch_auth_v1_auth0_secondary_oncall_seat_r2.md  project_arch_auth_v1_auth0_secondary_oncall_seat_r3.md  project_arch_auth_v1_auth0_secondary_oncall_seat_r4.md  project_arch_auth_v1_auth0_secondary_oncall_seat_r5.md  project_arch_auth_v1_auth0_secondary_oncall_seat_r6.md  project_arch_auth_v1_auth0_secondary_oncall_seat_r7.md  project_arch_auth_v1_auth0_secondary_oncall_seat_r8.md  project_arch_auth_v1_auth0_secondary_oncall_seat_r9.md  project_arch_auth_v1_secondary_oncall_seat.md  (+707 more)
experiments/results/20260521_040725_effort-high_lang-en_inj-raw/: .contaminated.json
experiments/results/20260521_084653_effort-high_lang-en_inj-raw/: secondary_judge_kappa.json
experiments/scripts/: data-census.sh  run_4th_sweep.sh
experiments/src/: extract_claude_sessions.py  run_experiment.py  run_secondary_judge.py  tasks_external.py  tasks_gradient.py
getting-started/: index.html
how-it-works/: index.html
paper/: main.tex  references.bib
paper/latex/: colm_submission.tex  main.tex  references.bib
paper/paper-2-mechanism/: draft-v2.md  main.tex  references.bib
planning/: decisions.md  paper-reframe-2026-05-28.md
planning/audits/: README.md  cross-session-review-prompt.md
planning/drafts/: paper_v2_revision_kit.md
privacy-policy/: index.html
privacy-policy.ko/: index.html
research/: index.html
search/: search_index.json
session-orchestration/: index.html
src/ploidy/: __init__.py  api_client.py  cli.py  convergence.py  dashboard.py  history_cli.py  injection.py  lockprovider.py  metrics.py  render.py  server.py  service.py  store.py  stream.py  webapp.py
submissions/colm-2026/: main.tex
templates/: index.html
terms-of-service/: index.html
terms-of-service.ko/: index.html
tests/: test_api_client.py  test_cli.py  test_convergence.py  test_dashboard.py  test_debate_tool.py  test_http_e2e.py  test_injection.py  test_lockprovider.py  test_metrics.py  test_multitenancy.py  test_oauth_endpoints.py  test_oauth_store.py  test_render.py  test_retention.py  test_server.py  test_stream.py  test_token_savings.py  test_webapp.py
token-cost/: index.html
tools/raycast/: README.md  ploidy-debate.sh
v0.4-migration/: index.html
(+32 files in other folders)
