[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ploidy"
version = "0.3.0"
description = "Cross-session multi-agent debate MCP server. Same model, different context depths, better decisions."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "heznpc" },
]
keywords = ["mcp", "multi-agent", "debate", "llm", "context-asymmetry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0,<2",
    "aiosqlite>=0.20,<1",
]

[project.scripts]
ploidy = "ploidy.server:main"
ploidy-dashboard = "ploidy.dashboard:main"

[project.optional-dependencies]
api = [
    "openai>=1.0",
]
dashboard = [
    "uvicorn>=0.30",
    "aiosqlite>=0.20,<1",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]
docs = [
    "mkdocs-material",
    "mkdocs-minify-plugin",
]
all = [
    "ploidy[api,dashboard,dev,docs]",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"experiments/*" = ["E501"]  # experiment data contains long ground-truth strings

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
